--- a/style.css
+++ b/style.css
@@ -74,12 +74,14 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  animation: slide-in 0.4s forwards;
 }
+
 
 #switch span {
   display: block;
@@ -130,11 +132,28 @@ body * {
 /* media queries */
 @media (min-width: 700px) {
   :root {
-  --bg-url: url(./assets/bg-desktop.jpg);
+    --bg-url: url(./assets/bg-desktop.jpg);
   }
- .light {
-  --bg-url: url(./assets/bg-desktop-light.jpg);
- }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
 
+/* animation */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
 
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
+}
